despliegue-doc/yaml/doc-apps/doc-web.yml

---
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: dbgene
  name: web
spec:
  selector:
    matchLabels:
      app: dbgene
      deploymentconfig: web
  template:
    metadata:
      labels:
        app: dbgene
        deploymentconfig: web
    spec:
      containers:
        - env:
            - name: SERVICES_EXECUTION_HOST
              value: execution-service
            - name: SERVICES_EXECUTION_PORT
              value: '8080'
            - name: SERVICES_WEB_HOST
              value: web
            - name: SERVICES_WEB_PORT
              value: '8080'
            - name: SERVICES_BACKEND_HOST
              value: backend-service
            - name: SERVICES_BACKEND_PORT
              value: '8080'
            - name: SERVICES_GATEWAY_HOST
              value: gateway-service
            - name: SERVICES_GATEWAY_PORT
              value: '8080'
            - name: SERVICES_SCENARIO_HOST
              value: scenario-service
            - name: SERVICES_SCENARIO_PORT
              value: '8080'
            - name: SERVICES_DATA_HOST
              value: data-service
            - name: SERVICES_DATA_PORT
              value: '8080'
            - name: KEYCLOAK_AUTH_SERVER_URL
              value: http://web.doclab-dev.com/auth
          image: quay.io/afcatano/knapsack-web:v1.0.0
          imagePullPolicy: Always
          name: web
          resources: {}
          terminationMessagePath: /dev/termination-log
          terminationMessagePolicy: File
      dnsPolicy: ClusterFirst
      #imagePullSecrets:
      #- name: dbgene-demos-registry.decisionbrain.cloud
      restartPolicy: Always
      schedulerName: default-scheduler
      securityContext: {}
      terminationGracePeriodSeconds: 30

---
apiVersion: v1
kind: Service
metadata:
  labels:
    app: dbgene
  name: web
spec:
  ports:
    - name: 8080-tcp
      port: 8080
      protocol: TCP
      targetPort: 8080
  selector:
    app: dbgene
    deploymentconfig: web
  sessionAffinity: None
  type: ClusterIP
